Add abstract refactoring